# src/main/java/com/xuxiaoye/api/bean/JWT.java
@@ -1,0 +1,17 @@
+package com.xuxiaoye.api.bean;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@SuppressWarnings("java:S1068")
+public class JWT {
+    private String accessToken;
+    private String refreshToken;
+    private String expiresIn;
+}
